# graphics

./: CMakeLists.txt
.cache/clangd/index/: main.cpp.71BE1816E274E0C2.idx
include/Math/: Vec2.h  Vec3.h  Vec4.h  Vector.h
include/fstream/: FObj.h  IStream.h
include/geomtery/: Face.h  Line2D.h  Triangle.h  Triangle2D.h  Vertex.h  Vertex2D.h
include/istream/: IObj.h
include/math/: Mat4.h  Vec2.h  Vec3.h  Vec4.h
include/objects/: Camera.h  Color.h  Drawble.h  Mesh.h  Object.h  Point.h  Polygon.h  Triangle.h  Vertex.h
include/render/: IRender.h  IWindow.h  Projection.h
include/render/ASCII/graphic/: AsciiColor.h
include/render/ASCII/render/: Color.h  Drawble.h  Line.h  Pixel.h  Render.h  Triangle.h
include/render/ASCII/window/: AsciiWindow.h  Window.h
include/render/window/: Window.h
src/: main.cpp
src/Math/: Vec2.cpp  Vec3.cpp  Vec4.cpp  Vector.cpp
src/fstream/: FObj.cpp
src/math/: Mat4.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp  VecConversions.cpp
src/objects/: Camera.cpp  Color.cpp  Object.cpp
src/render/: Projection.cpp
src/render/ASCII/render/: AsciiWindow.cpp  Color.cpp  Line.cpp  Render.cpp  Triangle.cpp
src/render/ASCII/window/: Window.cpp
